--- a/README.Rmd
+++ b/README.Rmd
@@ -18,15 +18,33 @@ All submissions to the github repo will be automatically uploaded for grading on
 
 ### step 1 result:
 
-abc
+Jordyn's work: 
+
+Ashlynn's work:
+
+Eitan's work:
+
+Ethan's work:
 
 ### step 2 result:
 
-def
+Jordyn's work: 
+
+Ashlynn's work:
+
+Eitan's work:
+
+Ethan's work:
 
 ### step 3 result:
 
-abc
+Jordyn's work: 
+
+Ashlynn's work:
+
+Eitan's work:
+
+Ethan's work:
 
 ### step 4 result:
 
