--- a/README.Rmd
+++ b/README.Rmd
@@ -18,11 +18,11 @@ All submissions to the github repo will be automatically uploaded for grading on
 
 ### step 1 result:
 
-abc
+
 
 ### step 2 result:
 
-def
+A variable that could be of special interest for this data set is Sale Price. 
 
 ### step 3 result:
 
@@ -36,4 +36,4 @@ Ashlynn's work:
 
 Eitan's work:
 
-Ethan's work:
+Ethan's work: 
