--- a/README.Rmd
+++ b/README.Rmd
@@ -18,33 +18,15 @@ All submissions to the github repo will be automatically uploaded for grading on
 
 ### step 1 result:
 
-Jordyn's work: 
-
-Ashlynn's work:
-
-Eitan's work:
-
-Ethan's work:
+abc
 
 ### step 2 result:
 
-Jordyn's work: 
-
-Ashlynn's work:
-
-Eitan's work:
-
-Ethan's work:
+abc
 
 ### step 3 result:
 
-Jordyn's work: 
-
-Ashlynn's work:
-
-Eitan's work:
-
-Ethan's work:
+abc
 
 ### step 4 result:
 
