--- a/README.Rmd
+++ b/README.Rmd
@@ -21,6 +21,7 @@ All submissions to the github repo will be automatically uploaded for grading on
 Jordyn's work: 
 
 Ashlynn's work:
+Ashlynn's work: 
 
 Eitan's work:
 
