--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,6 @@ All submissions to the github repo will be automatically uploaded for grading on
 
 A variable that could be of special interest for this data set is Sale Price. 
 
-
 ### step 3 result:
 
 abc
@@ -36,4 +35,4 @@ Ashlynn's work:
 
 Eitan's work:
 
-Ethan's work: 
+Ethan's work: I chose to compare Year Built against the special interest variable of Sale Price. 
