--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,6 @@ All submissions to the github repo will be automatically uploaded for grading on
 Jordyn's work: 
 
 Ashlynn's work:
-Ashlynn's work: 
 
 Eitan's work:
 
@@ -56,3 +55,12 @@ Ashlynn's work:
 Eitan's work:
 
 Ethan's work:
+
+```{r}
+library(classdata) 
+
+View(ames)
+```
+
+
+
