--- a/README.Rmd
+++ b/README.Rmd
@@ -32,9 +32,15 @@ The variables included in the data set are Parcel ID (Categorical), Address (Cat
 
 A variable that could be of special interest for this data set is Sale Price. 
 
-### step 3 result:
+### step 3 result:Ashlynn
 
-abc
+```{r}
+library(ggplot2)
+ggplot(ames, aes(x = `Sale Price`)) + 
+  geom_histogram(binwidth=100000) +
+  ggtitle("binwidth = 1000")
+```
+
 
 ### step 4 result:
 
