--- a/README.Rmd
+++ b/README.Rmd
@@ -29,10 +29,11 @@ head(ames)
 The variables included in the data set are Parcel ID (Categorical), Address (Categorical), Style (Categorical), Occupancy (Categorical), Sale Date (Categorical), Sale Price (Quantitative), Multi Sale (Categorical), Year Built (Categorical), Acres (Quantitative), Total Living Area (Quantitative), Bedrooms (Quantitative), Finished Basement Area (Quantitative), Lot Area (Quantitative), AC (Categorical), Fireplace (Categorical), Neighborhood (Categorical). Each variable represents a factor in the pricing of a home. We expect the ranges of the large variables to be in the thousands.
 
 ### step 2 result:
-(Ethan)
-A variable that could be of special interest for this data set is Sale Price. 
 
-### step 3 result: 
+(Ethan) A variable that could be of special interest for this data set is Sale Price.
+
+### step 3 result:
+
 (Ashlynn and Eitan)
 
 ```{r}
@@ -41,10 +42,12 @@ ggplot(ames, aes(x = `Sale Price`)) +
   geom_histogram(binwidth=100000) +
   ggtitle("binwidth = 1000")
 ```
+
 ```{r}
 # get the range of the variable sale price
 range(ames$`Sale Price`, na.rm = T)
 ```
+
 The general pattern is that the higher the price of the house the less houses there are. Oddities include insane outliers at certain prices.
 
 ### step 4 result:
@@ -64,6 +67,22 @@ After plotting the data it is clear that there is really no relationship between
 
 Ashlynn's work:
 
+```{r}
+library(ggplot2)
+ggplot(data = ames, aes(x = `TotalLivingArea (sf)`, y = `Sale Price`)) +
+  geom_point(color = "skyblue", alpha = 0.7) +
+  geom_smooth(method = "lm", se = TRUE, color = "blue") +
+  scale_x_continuous(limits = c(0, 3000)) + 
+  scale_y_continuous(limit = c(0, 1000000))
+  labs(title = "Scatter Plot of Total Living Area vs Sale Price", 
+       x = "Total Living Area (sf)", 
+       y = "Sale Price") + 
+  theme_minimal()
+  
+```
+
+After plotting, it is clear that there is a relationship between the two variables. The graph has a positive correlation that indicates that as the total living area increases the price of the house goes up. This is seen by the regression line in blue. There are only a few outliers that are seen which could be associated with the house having some value either historic or being in an expensive area.
+
 Eitan's work:
 
 ```{r}
@@ -80,7 +99,7 @@ ggplot(ames, aes(x=Bedrooms)) +
   scale_x_continuous(limits = c(0, 10))
 ```
 
-The pattern shows us that most homes have between 2 and 4 bedrooms with there obviously being outliers on either end. 
+The pattern shows us that most homes have between 2 and 4 bedrooms with there obviously being outliers on either end.
 
 To find the relationship that the number of bedrooms has to the main variable of Sale Price I will plot a scatterplot.
 
@@ -96,10 +115,11 @@ ggplot(ames, aes(x = Bedrooms, y = `Sale Price`)) +
        y = "Sale Price ($)") +
   theme_minimal()
 ```
+
 The overall pattern of the plot after I removed crazy outliers shows the trend we were expecting with a position correlation between sale price and number of bedrooms. The oddities that we found in 3 which were the outliers proved to influence the data as we expected if untouched.
 
-Ethan's work: 
-I chose to compare Year Built against the special interest variable of Sale Price. The range of this variable is from 1880 - 2022 (with on line showing 0 as a the year built indicating an error in entering of the data) Below is the histogram plot of the variable "YearBuilt". The pattern shows the majority of the houses were built in the late 1990's and early 2000's, but besides the one outlier at 0 the data shows a bell curve that may be skewed left a bit. 
+Ethan's work: I chose to compare Year Built against the special interest variable of Sale Price. The range of this variable is from 1880 - 2022 (with on line showing 0 as a the year built indicating an error in entering of the data) Below is the histogram plot of the variable "YearBuilt". The pattern shows the majority of the houses were built in the late 1990's and early 2000's, but besides the one outlier at 0 the data shows a bell curve that may be skewed left a bit.
+
 ```{r}
 library(classdata)
 #the below code shows how I found the range of the variable "YearBuilt"
@@ -109,7 +129,8 @@ library(ggplot2)
 ggplot(ames, aes(x=YearBuilt)) + geom_histogram(binwidth = 5) + scale_x_continuous(limits = c(1880,2022))
 ```
 
-After plotting just the "YearBuilt" variable, I plotted it against the special variable of interest "SalePrice". Below is the scatterplot of the two variables. A limit was added to both of the axes in order to make the plot readable in a sense. The y limit removed 1 outlier where the "YearBuilt" variable was 0, and the x limit removed two sets of outliers where the "SalePrice" was 20,000,000 and 14,000,000. From this graph, you can identify somewhat of a positive correlation, but not a strong one as data points are everywhere. An interesting oddity would be at the y axis, where there are a bunch of points ranging from all years where the "SalePrice" was 0. This plot still shows the oddities of the main variable from step 3 as it shows points at 0 on the y axis, but it does not show the outlier oddities that were removed from this graph to make it readable. Overall, this plot has an unclear shape as points are scattered all over, unclear pattern as there is no slope for the line of best fit, weak strength as there is very little clustering between points, and a very wide spread. 
+After plotting just the "YearBuilt" variable, I plotted it against the special variable of interest "SalePrice". Below is the scatterplot of the two variables. A limit was added to both of the axes in order to make the plot readable in a sense. The y limit removed 1 outlier where the "YearBuilt" variable was 0, and the x limit removed two sets of outliers where the "SalePrice" was 20,000,000 and 14,000,000. From this graph, you can identify somewhat of a positive correlation, but not a strong one as data points are everywhere. An interesting oddity would be at the y axis, where there are a bunch of points ranging from all years where the "SalePrice" was 0. This plot still shows the oddities of the main variable from step 3 as it shows points at 0 on the y axis, but it does not show the outlier oddities that were removed from this graph to make it readable. Overall, this plot has an unclear shape as points are scattered all over, unclear pattern as there is no slope for the line of best fit, weak strength as there is very little clustering between points, and a very wide spread.
+
 ```{r}
 #this is code for the scatterplot shown below comparing the two variables "SalePrice" and "YearBuilt". A limit was added to both of the axes in order to make the plot readable in a sense.Geom_smooth adds a line of best fit, although it is has no slope. 
 ggplot(ames, aes(x=`Sale Price`, y=YearBuilt)) + geom_point() + scale_y_continuous(limits = c(1880,2022)) + scale_x_continuous(limits = c(0,306000)) +  geom_smooth(method = "lm", se = FALSE)
